# wanguard-bgp-adapter

./: README.md  advertise.py  communities.yaml.example  config.py  gobgp.py  pyproject.toml  withdraw.py
api/: attribute_pb2.py  attribute_pb2.pyi  attribute_pb2_grpc.py  capability_pb2.py  capability_pb2.pyi  capability_pb2_grpc.py  gobgp_pb2.py  gobgp_pb2.pyi  gobgp_pb2_grpc.py
